--- a/public/notes.html
+++ b/public/notes.html
@@ -36,11 +36,12 @@
         <div class="col-8">
           <input
             class="note-title"
+            name="title"
             placeholder="Note Title"
             maxlength="28"
             type="text"
           />
-          <textarea class="note-textarea" placeholder="Note Text"></textarea>
+          <textarea name="text" class="note-textarea" placeholder="Note Text"></textarea>
         </div>
       </div>
     </div>
